--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@
     color: #fff;
     background: rgba(52, 58, 64, 0.5);
     line-height: 50px;
+    z-index:1000;
 }
 
 .scroll-to-top:focus,
@@ -52,3 +53,33 @@
 .scroll-to-top i {
     font-weight: 800;
 }
+
+.feature-heading-wrapper {
+    position: relative;
+    text-align: center;
+    margin-bottom: 4rem;
+  }
+  
+  .feature-heading {
+    display: inline-block;
+    position: relative;
+    font-size: 2.5rem;
+    z-index: 2;
+    background: white;
+    padding: 0 20px;
+  }
+  
+  .feature-heading-wrapper::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 50px;
+    background: linear-gradient(90deg, rgba(0,123,255,1) 0%, rgba(220,53,69,1) 100%);
+    z-index: 1;
+    transform: skewY(-6deg);
+    transform-origin: bottom left;
+  }
+  
